--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="public/images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User List</title>
-    <link rel="stylesheet" href="./src/index.css">
+    <!-- <link rel="stylesheet" href="./src/index.css"> -->
   </head>
   <body>
     <div id="root"></div>
